@@ -3,8 +3,12 @@ MANIFEST.SKIP
 Makefile.PL
 t/date.t
 lib/Date/Simple.pm
+lib/Date/Simple/Fmt.pm
+lib/Date/Simple/ISO.pm
+lib/Date/Simple/D8.pm
 lib/Date/Simple/NoXS.pm
 README
 COPYING
 Simple.xs
 ChangeLog
+META.yml                                 Module meta-data (added by MakeMaker)
