@@ -1,0 +1,12 @@
+# http://module-build.sourceforge.net/META-spec.html
+#XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
+name:         Date-Simple
+version:      3.00
+version_from: lib/Date/Simple.pm
+installdirs:  site
+requires:
+    Scalar::Util:                  
+    Test::More:                    
+
+distribution_type: module
+generated_by: ExtUtils::MakeMaker version 6.17
