@@ -1,3 +1,14 @@
+2004-04-02  Yves Orton <demerphq@hotmail.com>
+
+	* lib/Date/Simple.pm ($VERSION): Version 3.
+	  Maintainer change.
+	  Added formatting support and as_iso() XS method.
+	  Switched to using Test::More instead of Test.
+	  Prereqs expanded to include Test::More and Scalar::Util
+	  Both are standard distro in later perls.
+
+	* Makefile.pl: Dont mess with filenames xs is true.
+
 2002-12-06  John Tobey  <jtobey@john-edwin-tobey.org>
 
 	* lib/Date/Simple.pm ($VERSION): Version 2.04.
